--- a/src/components/layout-wrapper/LayoutWrapper.css
+++ b/src/components/layout-wrapper/LayoutWrapper.css
@@ -1,85 +1,38 @@
 .header {
-  display: flex !important;
-  justify-content: space-between !important;
-  align-items: center;
-  /* color: lightblue !important ; */
   background-color: #001529;
-  border-bottom: 1px solid gray;
-  overflow:hidden;
+  overflow: hidden;
 }
 
-.ant-menu-horizontal.ant-menu-root {
-  font-size: 16px;
-  border: none;
-}
-
-.ant-menu-horizontal.ant-menu-root .ant-menu-item {
-  color: white;
-  height: 32px;
-  margin-bottom: 12px;
-}
-
-.ant-menu-horizontal.ant-menu-root .ant-menu-item > span {
-  height: 32px;
+.header-container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-}
-
-.ant-menu-horizontal.ant-menu-root .ant-menu-item:hover::after {
-  border: none;
-}
-
-.ant-menu-horizontal.ant-menu-root .ant-menu-item-selected {
-  height: 32px;
-  color: #3c7d06;
-  font-weight: 500;
-  background-color: #e5f2de;
-  border-radius: 22px;
-  border: none;
-}
-
-.ant-menu-horizontal.ant-menu-root .ant-menu-item-selected:hover {
-  background-color: #e5f2de !important;
-}
-
-.ant-menu-horizontal.ant-menu-root .ant-menu-item-selected::after {
-  /* border-bottom: 2px solid #ff5500; */
-  border: none;
-  background-color: #e5f2de !important;
+  max-width: 1140px;
+  height: 65px;
+  margin: 0 auto;
+  /* background-color: #001529;  */
 }
 
 .secureDoc-logo-image {
-  height: 200px !important;
-  
+  height: 150px !important;
 }
 
 .layout-menu {
-  display: block;
-  padding-right: 4%;
-  font-weight: 500;
-  font-size: 16px;
-  /* border-bottom: 1px solid gray; */
+  display: flex;
+  justify-content: end;
+  width: 480px;
+  font-weight: 600;
+  font-size: 12px;
 }
 
-.logo-wrapper {
-  /* color: white; */
-  font-size: 22px;
-  /* font-weight: 700; */
-  padding-left: 4%;
-  /* height: 84px; */
-}
+/* .logo-wrapper {
+} */
 
 .logo-inner-wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 10px;
-}
-
-.logo-inner-wrapper h2 {
-  color: black;
-  font-size: 24px;
 }
 
 .drawer-button {
@@ -124,5 +77,6 @@
 
   .drawer-button {
     display: block;
+    color: white;
   }
 }
