--- a/src/components/layout-wrapper/LayoutWrapper.css
+++ b/src/components/layout-wrapper/LayoutWrapper.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #001529;
+  background-color: #031532;
   overflow: hidden;
 }
 
@@ -8,13 +8,49 @@
   justify-content: space-between;
   align-items: center;
   max-width: 1140px;
-  height: 65px;
+  height: 123px;
   margin: 0 auto;
-  /* background-color: #001529;  */
 }
 
 .secureDoc-logo-image {
-  height: 150px !important;
+  height: 100px !important;
+}
+
+.ant-menu-horizontal.ant-menu-root {
+  font-size: 16px;
+  border: none;
+}
+
+.ant-menu-horizontal.ant-menu-root .ant-menu-item {
+  color: white;
+}
+
+.ant-menu-horizontal.ant-menu-root .ant-menu-item > span {
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ant-menu-horizontal.ant-menu-root .ant-menu-item:hover::after {
+  border: none;
+  color: aliceblue;
+}
+
+.ant-menu-horizontal.ant-menu-root .ant-menu-item-selected {
+  color: #3c7d06;
+  font-weight: 500;
+  border: none;
+}
+
+.ant-menu-horizontal.ant-menu-root .ant-menu-item-selected:hover {
+  background-color: transparent !important;
+
+}
+
+.ant-menu-horizontal.ant-menu-root .ant-menu-item-selected::after {
+  /* border-bottom: 2px solid #ff5500; */
+  border: none;
 }
 
 .layout-menu {
@@ -23,6 +59,10 @@
   width: 480px;
   font-weight: 600;
   font-size: 12px;
+  height: 123px !important;
+  padding: 40px 0 32px !important;
+  color: white !important;
+  background-color: #031532;
 }
 
 /* .logo-wrapper {
