--- a/src/components/hero-section/Hero.css
+++ b/src/components/hero-section/Hero.css
@@ -1,11 +1,10 @@
 .hero-wrapper {
-  background-image: url("./images/heroImage.png");
+  background-image: url("./images/hero-bg.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   width: 1140px;
   height: 762px;
-  filter: brightness(60%);
 
   display: flex;
   flex-direction: column;
@@ -15,10 +14,33 @@
 
 .hero-title {
   color: #ffffff;
+  font-size: 32px;
+  font-weight: 400;
 }
 
 .search-container {
-  width: 780px !important;
+  width: 70% !important;
   padding: 40px 30px;
   background-color: #ffffff1a;
+}
+
+.search-container .ant-input-search-button {
+  background-color: #2ab27b;
+  color: white;
+}
+
+.pdf-regi-wrapper {
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  width: 70%;
+}
+
+.pdf-wrapper {
+  display: flex;
+}
+
+.pdf-text {
+  cursor: pointer;
+  text-decoration: underline;
 }
