--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,7 +1,7 @@
 .home-wrapper {
   display: flex;
   justify-content: center;
-  background-color: #041633;
+  /* background-color: #041633; */
   margin: 0;
   padding: 0;
 }
