--- a/src/components/hero-section/Hero.css
+++ b/src/components/hero-section/Hero.css
@@ -5,6 +5,7 @@
   background-position: center;
   width: 1140px;
   height: 762px;
+  background-color: #041633;
 
   display: flex;
   flex-direction: column;
@@ -24,9 +25,27 @@
   background-color: #ffffff1a;
 }
 
-.search-container .ant-input-search-button {
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  width: 70% !important;
+  padding: 40px 30px;
+  background-color: #ffffff1a;
+}
+
+.search-container .ant-input-search-button,
+.login-button {
   background-color: #2ab27b;
   color: white;
+  width: 115px;
+  height: 40px;
+}
+
+.login-input {
+  width: 330px;
 }
 
 .pdf-regi-wrapper {
@@ -43,4 +62,27 @@
 .pdf-text {
   cursor: pointer;
   text-decoration: underline;
+}
+
+credential-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.credential-text {
+  color: white;
+  font-size: 1rem;
+  text-align: start !important;
+}
+
+.credential-button-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.credential-note {
+  color: white;
+  font-size: 0.8rem;
 }
