--- a/src/components/hero-section/Hero.css
+++ b/src/components/hero-section/Hero.css
@@ -1,11 +1,21 @@
 .hero-wrapper {
+  display: flex;
+  justify-content: center;
+  /* background-color: #041633; */
+  margin: 0;
+  padding: 0;
+  background-color: #041633;
+}
+
+.hero-inner-wrapper {
   background-image: url("./images/hero-bg.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   width: 1140px;
   height: 762px;
-  background-color: #041633;
+
+  /* background-color: #041633; */
 
   display: flex;
   flex-direction: column;
@@ -53,6 +63,9 @@
   justify-content: space-between;
   color: white;
   width: 70%;
+  padding: 0 30px;
+
+  background-color: #102742;
 }
 
 .pdf-wrapper {
